[Password Manager] Save edited username on Mac

Bug: 756798
Change-Id: I9e7f5dad9fe3ff1a5a8c3bf878c67b0d17c994c6